# stdx-rs

./: .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  AI_POLICY.md  CONTRIBUTING.md  Cargo.toml  FUNDING.md  LICENSE.txt  Makefile  README.md
acme/: Cargo.toml  acme.rs  types.rs
acme/src/: lib.rs  types.rs
anyerr/: Cargo.toml  build.rs
anyerr/src/: backtrace.rs  chain.rs  context.rs  ensure.rs  error.rs  fmt.rs  kind.rs  lib.rs  ptr.rs  wrapper.rs
async-trait/: Cargo.toml
async-trait/src/: args.rs  bound.rs  expand.rs  lib.rs  lifetime.rs  parse.rs  receiver.rs  verbatim.rs
base32/: Cargo.toml  base32.rs  base32_avx2.rs  base32_neon.rs  serde.rs
base32/benches/: bench.rs
base64/: Cargo.toml  base64.rs  base64_avx2.rs  base64_neon.rs  serde.rs
base64/_fuzz/: Cargo.toml
base64/_fuzz/fuzzers/: utils.rs
base64/benches/: bench.rs
base64/src/: alphabet.rs  base64.rs  chunked_encoder.rs  decode.rs  display.rs  encode.rs  prelude.rs  tests.rs
base64/src/engine/: mod.rs  naive.rs  tests.rs
base64/src/read/: decoder.rs  decoder_tests.rs
base64/src/write/: encoder.rs  encoder_string_writer.rs  encoder_tests.rs
bel/: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  README_old.md
bel/_devcontainer/: bashrc
bel/_fuzz/: Cargo.toml
bel/_fuzz/fuzz_targets/: value_binop.rs
bel/_github/: release.yml  rust.yml
bel/benchmarks/: Cargo.toml
bel/benchmarks/benches/: runtime.rs
bel/examples/: Cargo.toml
bel/examples/src/: anyhow.rs  axum.rs  functions.rs  ip.rs  json.rs  serde.rs  simple.rs  threads.rs  variables.rs
bel/fuzz/: Cargo.toml
bel/src/: context.rs  duration.rs  functions.rs  json.rs  lib.rs  magic.rs  objects.rs  resolvers.rs  ser.rs
bel/src/common/: traits.rs  value.rs
bel/src/parser/: macros.rs  mod.rs  parse.rs  parser.rs  references.rs
cfg-if/: Cargo.toml
crc32fast/: Cargo.toml
crc32fast/_fuzz/: Cargo.toml
crc32fast/src/: baseline.rs  combine.rs  lib.rs  table.rs
crc32fast/src/specialized/: aarch64.rs  mod.rs  pclmulqdq.rs
cron/: Cargo.toml
cron/src/: error.rs  lib.rs  parsing.rs  queries.rs  schedule.rs
cron/src/time_unit/: days_of_month.rs  days_of_week.rs  hours.rs  minutes.rs  mod.rs  months.rs  seconds.rs  years.rs
crypto/: Cargo.toml  Makefile
crypto/benches/: aead.rs  hash.rs  mac.rs  signatures.rs  stream_ciphers.rs
crypto/docs/: draft-irtf-cfrg-xchacha-03.txt  rfc1421_pem.txt  rfc6234_sha2.txt  rfc7468_pem.txt  rfc7748_ecdh.txt  rfc7914_scrypt.txt  rfc8032_eddsa.txt  rfc9180_hpke.txt  xwing_draft.txt
crypto/specs/: rfc6979_ecdsa.txt  rfc7693_blake2.txt  rfc8439_chacha20_poly1305.txt  rfc9106_argon2.txt
crypto/src/: aes.rs  argon2.rs  blake2.rs  blake3.rs  bytes.rs  crypto.rs  ed25519.rs  hkdf.rs  hmac.rs  md5.rs  mldsa.rs  mlkem.rs  mod.rs  p256.rs  pbkdf2.rs  poly1305.rs  sha1.rs  sha2.rs  sha256.rs  sha256_amd64.rs  sha256_arm64.rs  sha3.rs  sha512.rs  sha512_amd64.rs  sha512_arm64.rs  x25519.rs  xwing.rs
crypto/src/aes/: aes.rs  aes256.rs  aes256_amd64.rs  aes256_arm64.rs  aes256_gcm_vectors.rs  aes_amd64.rs  aes_arm64.rs  aes_ctr.rs  aes_ctr_amd64.rs  aes_ctr_arm64.rs  aes_gcm.rs  aes_gcm_amd64.rs  aes_gcm_arm64.rs  aes_gcm_vectors.rs  ghash.rs  ghash_amd64.rs  ghash_arm64.rs  mod.rs
crypto/src/chacha/: chacha.rs  chacha20poly1305.rs  chacha_avx2.rs  chacha_avx512.rs  chacha_neon.rs  chacha_wasm_simd128.rs  hchacha20.rs  mod.rs
crypto/src/curve25519/: curve25519.rs  ed25519.rs  mod.rs  x25519.rs
crypto/src/encoding/: mod.rs  pem.rs  pkcs8.rs
crypto/src/mlkem/: mlkem.rs  mlkem1024.rs  mlkem768.rs  mod.rs
crypto/tests/: aes256_gcm_nodejs.rs
csv/: Cargo.toml  csv.rs  error.rs  reader.rs  serde.rs  writer.rs
csv/docs/: rfc4180_csv.txt
csv/tests/: tests.rs
csv_legacy2/: Cargo.toml  csv_legacy2.rs  error.rs  reader.rs  serde.rs  writer.rs
csv_legacy2/tests/: tests.rs
docker/: Cargo.toml
docker/src/: client.rs  containers.rs  docker.rs  error.rs  main.rs  model.rs
embed/: Cargo.toml  changelog.md  embed.rs  readme.md
embed/_examples/: poem.rs  salvo.rs
embed/_tests/: metadata.rs
embed/embed_impl/: Cargo.toml  embed_impl.rs
embed/embed_utils/: Cargo.toml  embed_utils.rs
embed/src/: lib.rs
form_urlencoded/: Cargo.toml  form_urlencoded.rs
hex/: Cargo.toml  hex.rs  hex_avx2.rs  hex_neon.rs  serde.rs
hex/_benches/: hex.rs
hex/benches/: bench.rs
hex/src/: error.rs  hex.rs  serde.rs
hex/tests/: serde.rs  version-number.rs
httpdate/: Cargo.toml
httpdate/_fuzz/: Cargo.toml
httpdate/src/: date.rs  lib.rs
json_rpc/: Cargo.toml  README.md
json_rpc/docs/: jsonrpc_2_spec.md
json_rpc/examples/: add_server.rs
json_rpc/src/: error_code.rs  json_rpc.rs  request.rs  response.rs  server.rs
jsonrpc/: Cargo.toml  README.md
jsonrpc/examples/: add_server.rs
jsonrpc/src/: id.rs  jsonrpc.rs  request.rs  response.rs  server.rs
lz4/: BENCHMARK_RESULTS.md  Cargo.toml
lz4/benches/: comparison.rs
lz4/src/: lib.rs
lz4/tests/: lz4_tests.rs
mail_builder/: Cargo.toml
mail_builder/examples/: multipart_message.rs  nested_message.rs
mail_builder/src/: lib.rs  mime.rs
maxminddb/: Cargo.toml  README.md
maxminddb/examples/: within.rs  write_database.rs
maxminddb/src/: decoder.rs  encoder.rs  geoip2.rs  maxminddb.rs  reader_test.rs  writer.rs
num_cpus/: Cargo.toml
num_cpus/src/: lib.rs  linux.rs
percent_encoding/: Cargo.toml  ascii_set.rs  percent_encoding.rs
pg/: Cargo.toml
pg/src/: config.rs  connection.rs  decode.rs  encode.rs  pg.rs  pool.rs  row.rs  transaction.rs
pg/src/types/: mod.rs
pg/tests/: integration.rs
ryu/: Cargo.toml
ryu/fuzz/: Cargo.toml
ryu/src/: d2s.rs  d2s_intrinsics.rs  d2s_small_table.rs  f2s.rs  f2s_intrinsics.rs  s2d.rs  s2f.rs
ryu/tests/: common_test.rs  d2s_intrinsics_test.rs  d2s_test.rs  exhaustive.rs  s2d_test.rs  s2f_test.rs
s3/: Cargo.toml  Makefile  README.md  buckets.rs  client.rs  objects.rs  s3.rs
s3/src/: lib.rs
s3/tests/: minio_integration.rs
scheduler/: Cargo.toml  error.rs  job.rs  lib.rs  scheduler.rs
semver/: Cargo.toml  semver.rs  serde.rs
semver/docs/: semver_2.md
(+274 files in other folders)
