[workspace]
resolver = "2"

members = [
    "tools/crypt",

    "bel",
    "bel/benchmarks",
    "bel/fuzz",
    "bel/examples",
    "countries",
    "crypto",
    "docker",
    "html_escape",
    "net",
    "strings",
    "uuid",

    "acme",
    "anyerr",
    "async-trait",
    "base32",
    "base32_2",
    "base64",
    "big_number",
    "cfg-if",
    "constant_time_eq",
    "crc32fast",
    "cron",
    "embed",
    "embed/embed_utils",
    "embed/embed_impl",
    "form_urlencoded",
    "getopts",
    "hex",
    "hostname",
    "httpdate",
    "ipnetwork",
    "itoa",
    "json_rpc",
    "mail_builder",
    "maxminddb",
    "memmem",
    "mime_guess",
    "num_cpus",
    "percent_encoding",
    "pin_project_lite",
    "postmark",
    "ryu",
    "s3",
    "scheduler",
    "serde_urlencoded",
    "serde_yaml",
    "single_instance",
    "term",
    "thiserror",
    "thiserror/impl",
    "tld",
    "unsafe_libyaml",
    "pg",
    "pg-derive"
]

[workspace.dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "oldtime", "serde", "std", ] }
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
indexmap = { version = "2" }
libc = "0.2"
memchr = "2"
mime = "0.3"
nom = "7"
rand = "0.9"
regex = { version = "1" }
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "http2", "multipart", "json", "rustls", "zstd"] }
aws-lc-rs = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
walkdir = "2"
zeroize = { version = "1", features = ["simd", "derive"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "logging", "tls12"] }
tokio-rustls = { version = "0.26" }
lru = "0.15"


# For macros
syn = { version = "2", default-features = false, features = ["derive", "extra-traits", "parsing", "proc-macro", "printing"] }
quote = "1"
proc-macro2 = "1"


criterion = { version = "0.5", features = ["html_reports"] }
