[workspace]
resolver = "2"

members = [
    "acme",
    "anyerr",
    "base32",
    "base64",
    "bel",
    "bel/benchmarks",
    "bel/examples",
    # "bel/fuzz",
    "big_number",
    "cfg_if",
    "constant_time_eq",
    "countries",
    "crc32fast",
    "cron",
    "crypto",
    "csv",
    "csv_legacy2",
    "csv_legacy",
    "docker",
    "dotenv",
    "dotenv/dotenv_derive",
    "embed",
    "embed/embed_impl",
    "errgroup",
    "embed/embed_utils",
    "form_urlencoded",
    "getopts",
    "hex",
    "hostname",
    "html_escape",
    "httpdate",
    "ipnetwork",
    "itoa",
    "json_rpc",
    "mail_builder",
    "maxminddb",
    "memmem",
    "mime_guess",
    "net",
    "num_cpus",
    "percent_encoding",
    "pg",
    "pg_derive",
    "pin_project_lite",
    "postmark",
    "retry",
    "ryu",
    "s3",
    "scheduler",
    "semver",
    "serde_urlencoded",
    "serde_yaml",
    "single_instance",
    "singleflight",
    "strings",
    "template",
    "term",
    "thiserror",
    "thiserror/impl",
    "tld",
    "tools/crypt",
    "unsafe_libyaml",
    "uuid",
]

[workspace.dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "oldtime", "serde", "std", ] }
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
indexmap = { version = "2" }
libc = "0.2"
memchr = "2"
mime = "0.3"
nom = "7"
paste = { git = "https://github.com/dtolnay/paste", ref = "6a302522990cbfd9de4e0c61d91854622f7b2999" }
rand = "0.9"
regex = { version = "1" }
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "http2", "multipart", "json", "rustls", "zstd"] }
aws-lc-rs = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
walkdir = "2"
zeroize = { version = "1", features = ["simd", "derive"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "logging", "tls12"] }
tokio-rustls = { version = "0.26" }
lru = "0.15"


# For macros
syn = { version = "2", default-features = false, features = ["derive", "extra-traits", "parsing", "proc-macro", "printing"] }
quote = "1"
proc-macro2 = "1"


criterion = { version = "0.5", features = ["html_reports"] }
