[package]
name = "async-trait"
version = "0.1.80"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["asynchronous", "no-std"]
description = "Type erasure for async trait methods"
documentation = "https://docs.rs/async-trait"
edition = "2024"
exclude = ["build.rs"]
keywords = ["async"]
license = "Apache-2.0"
repository = "https://github.com/bloom42/stdx"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
# syn = { version = "2.0.46", features = ["full", "visit-mut"] }

# [dev-dependencies]
# futures = "0.3.30"
# rustversion = "1.0.13"
# tracing = "0.1.40"
# tracing-attributes = "0.1.27"
# trybuild = { version = "1.0.81", features = ["diff"] }
#
# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]
# rustdoc-args = ["--generate-link-to-definition"]
