[package]
name = "base64"
version = "0.1.0"
edition = "2024"
description = "Fast base64 encoding and decoding with SIMD acceleration when available"

[lib]
path = "./base64.rs"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bench"
harness = false
