[package]
name = "cfg-if"
version = "1.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bloom42/stdx"
homepage = "https://github.com/rust-lang/cfg-if"
documentation = "https://docs.rs/cfg-if"
description = """
A macro to ergonomically define an item depending on a large number of #[cfg]
parameters. Structured like an if-else chain, the first matching branch is the
item that gets emitted.
"""
edition = "2024"

[dependencies]
# core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
# compiler_builtins = { version = '0.1.2', optional = true }
#
# [features]
# rustc-dep-of-std = ['core', 'compiler_builtins']
