[package]
name = "cron"
version = "0.12.1"
authors = ["Zack Slayton <zack.slayton@gmail.com>"]
repository = "https://github.com/bloom42/stdx"
documentation = "https://docs.rs/cron"
readme = "README.md"
description = "A cron expression parser and schedule explorer."
keywords = [ "cron", "schedule", "repeat", "periodic", "time" ]
license = "Apache-2.0"
edition = "2024"

[lib]
name = "cron"

[dependencies]
chrono = { workspace = true }
nom = { workspace = true }
# once_cell = "1.10"

# [dev-dependencies]
# chrono-tz = "~0.6"
