[package]
name = "crypto"
version = "0.1.0"
edition = "2024"
authors = ["Sylvain Kerkour"]

[lib]
path = "./src/crypto.rs"

[features]
default = ["std", "zeroize"]

alloc = []
std = ["alloc"]
zeroize = ["dep:zeroize"]

[dependencies]
zeroize = { workspace = true, optional = true }
thiserror = { path = "../thiserror" }
big_number = { path = "../big_number" }
constant_time_eq = { path = "../constant_time_eq" }
base64 = { path = "../base64" }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex = { path = "../hex" }
serde_json = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "mac"
harness = false
