[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/crypto.rs"

[features]
default = ["std", "zeroize"]

alloc = []
std = ["alloc", "memchr/std"]
zeroize = ["dep:zeroize"]

[dependencies]
memchr = { version = "2", default-features = false, features = ["alloc"] }
zeroize = { workspace = true, optional = true }
big_number = { path = "../big_number" }
constant_time_eq = { path = "../constant_time_eq" }
base64 = { path = "../base64" }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex = { path = "../hex" }
serde_json = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "mac"
harness = false

[[bench]]
name = "signatures"
harness = false
