[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/crypto.rs"

[features]
default = ["std", "zeroize"]

alloc = []
std = ["alloc", "blake3/std", "memchr/std"]
zeroize = ["dep:zeroize", "blake3/zeroize"]

[dependencies]
base64 = { path = "../base64" }
big_number = { path = "../big_number" }
blake3 = { workspace = true, features = ["neon", "wasm32_simd"] }
constant_time_eq = { path = "../constant_time_eq" }
memchr = { version = "2", default-features = false, features = ["alloc"] }
rand = { workspace = true }
zeroize = { workspace = true, optional = true }


[dev-dependencies]
criterion = { workspace = true }
hex = { path = "../hex" }
serde_json = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "mac"
harness = false

[[bench]]
name = "signatures"
harness = false

[[bench]]
name = "stream_ciphers"
harness = false
