[package]
name = "csv"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "./csv.rs"

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:itoa", "dep:ryu", "dep:serde"]

[dependencies]
itoa = { path = "../itoa", optional = true }
memchr = { workspace = true }
ryu = { path = "../ryu", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
