[package]
name = "csv_legacy2"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "./csv_legacy2.rs"

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]

[dependencies]
memchr = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
