[package]
name = "hex"
version = "0.1.0"
edition = "2024"
description = "Fast hex encoding and decoding"

[lib]
path = "./hex.rs"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bench"
harness = false
