[package]
name = "httpdate"
version = "1.0.3"
authors = ["Pyfisch <pyfisch@posteo.org>"]
license = "Apache-2.0"
description = "HTTP date parsing and formatting"
keywords = ["http", "date", "time", "simple", "timestamp"]
readme = "README.md"
repository = "https://github.com/bloom42/stdx"
edition = "2024"
rust-version = "1.85"

# [dev-dependencies]
# criterion = "0.5"

# [[bench]]
# name = "benchmarks"
# harness = false
