[package]
name = "json_rpc"
version = "0.1.0"
description = "JSON-RPC 2.0 types and serialization"
license = "MIT"
edition = "2024"
readme = "README.md"

[lib]
path = "src/json_rpc.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }

[dev-dependencies]
tokio = { workspace = true }
