[package]
name = "mail_builder"
description = "E-mail builder library for Rust"
version = "0.3.1"
edition = "2024"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bloom42/stdx"
homepage = "https://github.com/stalwartlabs/mail-builder"
keywords = ["email", "mime", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"

[features]
default = []
ludicrous_mode = []

[dependencies]
# gethostname = "0.4.0"
rand = { workspace = true }

# [dev-dependencies]
# mail-parser = "0.9"
# serde = { version = "1.0", features = ["derive"]}
# serde_yaml = "0.9.10"
# serde_json = "1.0"
