[package]
name = "s3"
version = "0.1.0"
edition = "2024"

[lib]
path = "s3.rs"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
hmac = "0.12.1"
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = { workspace = true, features = ["stream"], optional = true }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
url = "2"

[dev-dependencies]
tokio = { workspace = true }
