[package]
name = "s3"
version = "0.1.0"
edition = "2024"

[lib]
path = "s3.rs"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
# async-trait = { path = "../async-trait" }
base64 = { path = "../base64" }
bytes = { workspace = true }
crypto = { path = "../crypto" }
futures-util = { workspace = true }
hex = { path = "../hex" }
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = { workspace = true, features = ["stream"], optional = true }
serde = { workspace = true, features = ["derive"] }
url = "2"

[dev-dependencies]
tokio = { workspace = true }
