[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[lib]
path = "./lib.rs"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
cron = { path = "../cron" }

chrono = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
