[package]
name = "semver"
version = "0.1.0"
edition = "2024"
description = "Semantic Versioning 2.0 parser and comparator"

[lib]
path = "./semver.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
